Bug 430442 - Undo and redo in the library are sometimes not correctly working, r=dietrich